--- a/CSS/4.css
+++ b/CSS/4.css
@@ -1,104 +1,141 @@
+body {
+    width: 70%;
+    align-items: center;
+    margin: 5% 15%;
+}
 
-.line{
+.line {
     text-align: center;
 }
-.line1{
+
+.line1 {
     font-family: Georgia;
     font-size: large;
 }
-.line2{
+
+.line2 {
     text-align: center;
 }
-.line3{
-    /* font-size: 3.2vw; */
+
+.line3 {
+    /* font-size: 3vw; */
     text-align: justify;
     font-size: large;
 }
 
-.par{
-    line-height: 1.5;
-    font-size: 3.4vh;
+.clear-right {
+    clear: left;
+}
+
+.par {
+    line-height: 1.3;
+    font-size: 3.3vh;
+    text-align: justify;
+
 
 }
-img{
+
+img {
     width: 100%;
     height: 800px;
 }
-#img1{
-    
+
+#img1 {
+
     float: left;
     width: 30%;
     height: auto;
     margin: 20px;
     /* display: flex; */
     line-height: 1.5;
-    
-    
+
+
+
 }
-#img2{
-    
+
+#img2 {
+
     float: right;
     width: 30%;
     height: auto;
     margin: 20px;
-    
-    
+
+
 }
-#img3{
-    
+
+#img3 {
+
     float: left;
     width: 30%;
     height: auto;
     margin: 20px;
-    
-}#img4{
-    
-    float: right;
-    width: 30%;
-    height: auto;
-    margin: 20px;
-    
-}#img5{
-    
-    float: left;
-    width: 30%;
-    height: auto;
-    margin: 20px;
-    
-}#img6{
-    
-    float: right;
-    width: 30%;
-    height: auto;
-    margin: 20px;
-    
-}#img7{
-    
-    float: left;
-    width: 30%;
-    height: auto;
-    margin: 20px;
-    
-}#img8{
-    
-    float: right;
-    width: 30%;
-    height: auto;
-    margin: 20px;
-    
+
 }
-#img9{
-    
-    float: left;
-    width: 30%;
-    height: auto;
-    margin: 20px;
-    
-}#img10{
-    
+
+#img4 {
+
     float: right;
     width: 30%;
     height: auto;
     margin: 20px;
-    
+
+}
+
+#img5 {
+
+    float: left;
+    width: 30%;
+    height: auto;
+    margin: 20px;
+
+}
+
+#img6 {
+
+    float: right;
+    width: 30%;
+    height: auto;
+    margin: 20px;
+
+}
+
+#img7 {
+
+    float: left;
+    width: 30%;
+    height: auto;
+    margin: 20px;
+
+}
+
+#img8 {
+
+    float: right;
+    width: 30%;
+    height: auto;
+    margin: 20px;
+
+}
+
+#img9 {
+
+    float: left;
+    width: 30%;
+    height: auto;
+    margin: 20px;
+
+}
+
+#img10 {
+
+    float: right;
+    width: 30%;
+    height: auto;
+    margin: 20px;
+
+}
+
+b {
+    font-size: larger;
+    background-color: rgb(210, 255, 119);
 }
