--- a/CSS/book.css
+++ b/CSS/book.css
@@ -1,11 +1,65 @@
-#bg{
-    width: 100%;
-    height: 600px;
+#main{
+ background-color: rgb(228, 243, 255);
 }
-.text-on-image{
-    position: absolute;
-    top: 20px;
-    left: 20px;
-    color: white;
+#main img{
+    float: right;
+    gap: 20px;
+    width: 35x;
+    height: 350;
+}
+#main p{
+   
+    line-height: 1.5;
+    font-size: large;
     
+}
+#main ul{
+    font-size: large;
+    line-height: 1.5;
+}
+#main ul li{
+    
+    background-repeat: no-repeat;
+    padding: px;
+    list-style-image: url(book/images.png);
+}
+#main0{
+    background-color: rgb(225, 255, 155);
+    height: 40px;
+   
+}
+#main0 h1{
+    text-align: center;
+    
+    
+}
+button:hover{
+    color: rgb(20, 55, 255);
+    transform: scale3d(1.2); 
+    transition: transform 0.7s ease;  
+}
+#menu{
+    float: ;
+}
+#menu ul{
+    list-style-type: none;
+    margin: 16px 0 0 0;
+    
+}
+#menu ul li{
+    text-decoration: none;
+    margin-left: 2%;
+    float: left;
+    text-align: center;
+    width: 25%;
+}
+#menu ul li a{
+    font-weight: bold;
+    display: block;
+    text-decoration: none;
+
+}
+#menu ul li a:hover{
+    background-color:rgb(0, 26, 255);
+    color(srgb red green blue);
 }
