--- a/CSS/book.css
+++ b/CSS/book.css
@@ -39,11 +39,15 @@ button:hover{
     transition: transform 0.7s ease;  
 }
 #menu{
-    float: ;
+    
+}
+div{
+    float left;
 }
 #menu ul{
     list-style-type: none;
     margin: 16px 0 0 0;
+    background-color: beige;
     
 }
 #menu ul li{
@@ -57,9 +61,8 @@ button:hover{
     font-weight: bold;
     display: block;
     text-decoration: none;
-
 }
 #menu ul li a:hover{
-    background-color:rgb(0, 26, 255);
+    background-color:rgb(185, 190, 229);
     color(srgb red green blue);
 }
